--- a/home.html
+++ b/home.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AI Virtual Assistant</title>
+  <title>AI Voice Budddy</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body class="home">
   <div class="welcome-container">
-    <h1 class="tagline">Welcome to Your Personal AI Assistant!</h1>
+    <h1 class="tagline">Welcome to Your Personal AI Voice Buddy</h1>
     <p class="subheading">Empowering you with the future of technology.</p>
-    <a href="index.html" class="botn">Click here to use your AI assistant</a>
+    <a href="index.html" class="botn">Click here to use your AI voice Buddy</a>
   </div>
 </body>
 </html>
